force-app/main/default/objects/Routing_Rule__mdt/Routing_Rule__mdt.object-meta.xml
<CustomObject>
    <description>BR-07/BR-08/BR-21. Governed ownership precedence. Records are authored in the Identity/Routing increment.</description>
    <label>Routing Rule</label>
    <pluralLabel>Routing Rules</pluralLabel>
</CustomObject>