force-app/main/default/objects/Routing_Rule__mdt/fields/Basis__c.field-meta.xml
<CustomField>
    <fullName>Basis__c</fullName>
    <description>Assignment basis this rule represents.</description>
    <inlineHelpText>Assignment basis this rule represents.</inlineHelpText>
    <label>Basis</label>
    <length>60</length>
    <type>Text</type>
</CustomField>