force-app/main/default/objects/Routing_Rule__mdt/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <description>ISO country code this rule covers. BR-06.</description>
    <inlineHelpText>ISO country code this rule covers. BR-06.</inlineHelpText>
    <label>Country Code</label>
    <length>8</length>
    <type>Text</type>
</CustomField>