force-app/main/default/objects/Routing_Rule__mdt/fields/Destination_Queue__c.field-meta.xml
<CustomField>
    <fullName>Destination_Queue__c</fullName>
    <description>DeveloperName of the coverage queue this territory routes to. Several territories may share one queue. BR-07.</description>
    <inlineHelpText>DeveloperName of the coverage queue this territory routes to. Several territories may share one queue. BR-07.</inlineHelpText>
    <label>Destination Queue</label>
    <length>80</length>
    <type>Text</type>
</CustomField>