force-app/main/default/objects/Routing_Rule__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <description>Whether this rule is in force.</description>
    <inlineHelpText>Whether this rule is in force.</inlineHelpText>
    <label>Is Active</label>
    <defaultValue>true</defaultValue>
    <type>Checkbox</type>
</CustomField>