force-app/main/default/objects/Routing_Rule__mdt/fields/Precedence_Order__c.field-meta.xml
<CustomField>
    <fullName>Precedence_Order__c</fullName>
    <description>Evaluation order. Lower wins first.</description>
    <inlineHelpText>Evaluation order. Lower wins first.</inlineHelpText>
    <label>Precedence Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>