force-app/main/default/objects/Routing_Rule__mdt/fields/Segment_Name__c.field-meta.xml
<CustomField>
    <fullName>Segment_Name__c</fullName>
    <description>Segment this rule applies to. Blank means all segments.</description>
    <inlineHelpText>Segment this rule applies to. Blank means all segments.</inlineHelpText>
    <label>Segment Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>