force-app/main/default/objects/Routing_Rule__mdt/fields/State_Codes__c.field-meta.xml
<CustomField>
    <fullName>State_Codes__c</fullName>
    <description>Comma-delimited state/province codes for a sub-national split. Blank means the rest of the country. BR-06.</description>
    <inlineHelpText>Comma-delimited state/province codes for a sub-national split. Blank means the rest of the country. BR-06.</inlineHelpText>
    <label>State Codes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>