force-app/main/default/objects/Routing_Rule__mdt/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <description>Territory this rule applies to. Blank means all territories.</description>
    <inlineHelpText>Territory this rule applies to. Blank means all territories.</inlineHelpText>
    <label>Territory</label>
    <length>40</length>
    <type>Text</type>
</CustomField>